# stonr

./: Cargo.toml  README.md  checklist.md  spec.md
.github/workflows/: build-release.yml  test-and-coverage.yml
docs/: api.md  checklist.md  mirroring.md  onion.md  spec.md
nix/: standalone.nix
src/: config.rs  event.rs  main.rs  mirror.rs  mirror_config.rs  server.rs  siphon.rs  storage.rs  ws.rs
tests/: cli.rs  serve.rs
